<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_marginBottom="0dp"
    android:layout_gravity="center">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerInParent="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/llphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="5"
            app:hintAnimationEnabled="true"
            app:counterOverflowTextAppearance="@style/ErrorText"
            app:counterTextAppearance="@style/CounterText"
            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber1"
                android:textColor="@color/btn_login_bg"
                android:inputType="phone"
                android:digits="0123456789+"
                android:padding="10dp"
                android:textColorHint="@color/btn_login_bg"
                android:background="@color/input_register_bg"

                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/password"
        android:layout_below="@+id/llphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/HintText"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/btn_login_bg"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textColorHint="@color/btn_login_bg"
                android:background="@color/input_register_bg"
                android:padding="10dp"


                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_below="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/green1"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        />
        <Button
            android:id="@+id/btnforgetpssword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginTop="30dp"
            android:onClick="forgetPassword"
            android:text="@string/forgetpassword"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>

    <Button
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:onClick="BackToRegister"
        android:text="@string/backToRegister"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp" />
</RelativeLayout>