<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    tools:context=".Search"
    android:orientation="vertical"
    android:focusable="false">
    <include layout="@layout/toolbar" android:id="@+id/asdasd" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UserInformations"
        android:background="@color/green1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        />
<LinearLayout
android:id="@+id/contactinfo"
android:clickable="true"
android:focusable="true"
android:foreground="?android:attr/selectableItemBackground"
android:layout_width="match_parent"
android:layout_height="wrap_content"
cardview:layout_goneMarginRight="10dp"
android:layout_marginBottom="15dp"
android:padding="20dp"


android:background="@color/white">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintAnimationEnabled="true"

            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText
                android:textAlignment="center"
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textCursorDrawable="@null"
                android:textColor="@color/input_register"
                android:paddingBottom="15dp"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_below="@+id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/input_register"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:textColorHint="@color/input_register_hint"
                />


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llphone"
        android:layout_below="@+id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="5"
            app:hintAnimationEnabled="true"
            app:counterOverflowTextAppearance="@style/ErrorText"
            app:counterTextAppearance="@style/CounterText"
            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/etPhoneNumber2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber2"
                android:textColor="@color/input_register"
                android:inputType="phone"
                android:digits="0123456789+"
                android:paddingBottom="15dp"                            android:textColorHint="@color/input_register_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/password"
        android:layout_below="@+id/llphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/HintText"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/input_register"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textColorHint="@color/input_register_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <Button
        android:layout_below="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:background="@color/md_green_400"
        android:layout_centerHorizontal="true"
        android:onClick="SendPersonalInfo"
        />

</RelativeLayout>

</LinearLayout>

</LinearLayout>