<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasketsProducts"
    android:orientation="vertical">
    <include layout="@layout/toolbar" android:id="@+id/asdasd" />




    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"/>


    <LinearLayout
        android:id="@+id/llEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="invisible">
        <TextView
            android:id="@+id/tvIsEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textAlignment="center"
            android:textColor="@color/green1"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/imgIsEmpty"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/btnKeepShopping"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/green1"
            android:layout_marginTop="30dp"
            android:text="@string/btnKeepShopping"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="KeepShopping"/>


    </LinearLayout>

<ScrollView
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/asdasd"
    android:layout_above="@+id/bottom">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




        <TextView
            android:id="@+id/tvNumberOfProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"/>



       <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBasketProducts"
            android:layout_below="@+id/tvNumberOfProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RelativeLayout>
</ScrollView>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:id="@+id/bottom"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/llBuyAllProducts"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone"
        android:background="@drawable/stroke">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvTotalMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="0€" />

        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/completeBuyting"
            android:background="@color/green1"
            android:onClick="CompleterSelling"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"/>
    </LinearLayout>
    <include

        android:layout_width="match_parent"
        android:layout_height="56dp"
        layout="@layout/tab"
        android:id="@+id/bottombar" />

</LinearLayout>
</RelativeLayout>
