<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/green1"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        />
    <TextView
        android:id="@+id/tvWelcome1"
        android:layout_below="@+id/tvWelcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_centerInParent="true">




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="5"
            app:hintAnimationEnabled="true"
            android:padding="5dp"
            app:counterOverflowTextAppearance="@style/ErrorText"
            app:counterTextAppearance="@style/CounterText"
            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/input_register_bg"
                android:hint="@string/phoneNumber1"
                android:textColor="@color/input_register"
                android:inputType="phone"
                android:digits="0123456789+"
                android:padding="10dp"
                android:textColorHint="@color/input_register_hint"

                />

        </com.google.android.material.textfield.TextInputLayout>


<!--        <EditText-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:background="@color/input_register_bg"-->
<!--            android:hint="@string/hint_name"-->
<!--            android:padding="10dp"-->
<!--            android:singleLine="true"-->
<!--            android:textColor="@color/input_register"-->
<!--            android:inputType="phone"-->
<!--            android:digits="0123456789+"-->
<!--            android:textColorHint="@color/input_register_hint" />-->


        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/green1"
            android:text="@string/btn_register"
            android:textColor="@color/white"
         />

        <!-- Link to Login Screen -->


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_marginTop="50dp"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/btnGotoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/haveaccount"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:onClick="goToLogin" />
    </LinearLayout>
</LinearLayout>
</ScrollView>

</RelativeLayout>